@@ -29,9 +29,8 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.19.0'
     compile 'org.apache.logging.log4j:log4j-core:2.19.0'
     compile 'com.oracle.database.jdbc:ojdbc8:21.8.0.0'
-    compile 'org.springframework:spring-beans:5.3.24'
-    compile 'org.springframework:spring-jdbc:5.3.24'
-    compile 'com.io7m.xom:xom:1.2.10'
+    compile 'org.springframework:spring-beans:5.3.25'
+    compile 'org.springframework:spring-jdbc:5.3.25'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
